<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateTaskFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:stretchColumns="*">

            <TableRow>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_span="2"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center_horizontal"
                    android:textSize="@dimen/info_text_size"
                    android:text="@string/label_create_information" />
            </TableRow>

            <TableRow>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/top_margin"
                    android:layout_marginLeft="@dimen/left_margin"
                    android:textSize="@dimen/main_text_size"
                    android:text="@string/label_name_info" />
            </TableRow>

            <TableRow>
                <EditText
                    android:id="@+id/name_text_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:scrollHorizontally="true"
                    android:layout_span="2"
                    android:layout_marginLeft="@dimen/left_margin"
                    android:layout_marginRight="@dimen/right_margin"/>
            </TableRow>

            <TableRow>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/left_margin"
                    android:textSize="@dimen/main_text_size"
                    android:text="@string/label_desc_info" />
            </TableRow>

            <TableRow>
                <EditText
                    android:id="@+id/desc_text_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:scrollHorizontally="true"
                    android:layout_span="2"
                    android:layout_marginLeft="@dimen/left_margin"
                    android:layout_marginRight="@dimen/right_margin"/>
            </TableRow>


            <TableRow>
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_span="2"
                    android:layout_marginTop="@dimen/top_margin"
                    android:layout_marginLeft="@dimen/left_margin"
                    android:layout_marginRight="@dimen/right_margin"
                    android:textSize="@dimen/main_text_size"
                    android:text="@string/create_button_text"
                    android:onClick="createLabel"/>
            </TableRow>
        </TableLayout>
    </ScrollView>


</FrameLayout>
